--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     /* PLACEHOLDER */
     background-image: url("https://icanbecreative.com/res/freeweb/2011/04/oudjat_dark.png");
+    background-size: contain;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
 }
@@ -19,10 +20,19 @@ html, body, p {
     transform: translate(-50%, -50%);
 }
 
+.window.fullscreen {
+    padding: 0;
+    background-color: 0;
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .startup {
     padding: 8px;
     height: 100vh;
     background-color: black;
+    transition: 0.2s;
 }
 
 .startup > p {
@@ -30,7 +40,8 @@ html, body, p {
     color: white;
     font-size: 2rem;
 }
+
 .hidden {
-    visibility: hidden;
+    opacity: 0;
 }
 
